--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Okoa Biashara</title>
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
-    
+    <div class="navbar">
+        <nav>
+            <a href="home.html">
+                <img class="logo" src="/images/Okoa Biashara logo.png" alt="logo">
+                <span class="okoa">Okoa Biashara</span>
+            </a>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="terms.html">Terms & Conditions</a></li>
+                <li><a href="form.html">Loan Application Form</a></li>
+            </ul>
+            <button>Login</button>
+        </nav>
+    </div>
+
 </body>
 </html>
