Home page welcome message

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     
 </head>
 <body>
+    <!-- start of navbar -->
     <div class="navbar">
         <nav>
             <a href="home.html">
@@ -25,6 +26,13 @@
             <button>Login</button>
         </nav>
     </div>
+    <!-- End of navbar -->
+     <h1>Welcome To Okoa Biashara</h1>
+     <p class="beta">Are you a small business owner who needs a loan to add stock to your business?<br>
+        Are you looking for a; <strong><em> Reliable, Quick, Low interest </em></strong>loan? <br>
+        Okoa Biashara got you covered. <br>
+        Signup/Login to our website and get the loan to your M-Pesa or Bank Acccount in a few minutess.
+     </p>
 
 </body>
 </html>
