--- a/form.html
+++ b/form.html
@@ -25,6 +25,16 @@
             <button>Login</button>
         </nav>
     </div>
+    <div class="form">
+        <form action="submit">
+            <h1 class="form-title">Loan Application Form</h1>
+            <div class="form-control">
+                <input type="text" name="" id="" placeholder="">
+                <label for="username">username</label>
+            </div>
+
+        </form>
+    </div>
 
 </body>
 </html>
