complete terms of service

--- a/home.html
+++ b/home.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Okoa Biashara</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
     <!-- start of navbar -->
     <div class="navbar">
@@ -27,12 +29,29 @@
         </nav>
     </div>
     <!-- End of navbar -->
-     <h1>Welcome To Okoa Biashara</h1>
-     <p class="beta">Are you a small business owner who needs a loan to add stock to your business?<br>
-        Are you looking for a; <strong><em> Reliable, Quick, Low interest </em></strong>loan? <br>
-        Okoa Biashara got you covered. <br>
-        Signup/Login to our website and get the loan to your M-Pesa or Bank Acccount in a few minutess.
-     </p>
+    <main>
+        <h1>Welcome To Okoa Biashara</h1>
+        <p class="beta">Are you a small business owner who needs a loan to add stock to your business?<br>
+            Are you looking for a; <strong><em> Reliable, Quick, Low interest </em></strong>loan?
+            Okoa Biashara got you covered. <br>
+            Signup/Login to our website and get the loan to your M-Pesa or Bank Acccount in a few minutes.
+        </p>
+    </main>
+    <div class="login-form">
+        <h2>Login</h2>
+        <form action="Login/signup">
+            <div class="input-box">
+                <span class="icon"></span>
+                <label for="Email">Email:</label>
+                <input type="email" required>
+                <label for="Password">Password:</label>
+                <input type="password" required>
+            </div>
+
+        </form>
+    </div>
+    <script src="script.js"></script>
 
 </body>
+
 </html>
