--- a/terms.html
+++ b/terms.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Okoa Biashara</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
     <div class="navbar">
         <nav>
@@ -25,6 +27,52 @@
             <button>Login</button>
         </nav>
     </div>
+    <div class="termss">
+        <h1>Terms And Conditions.</h1>
+        <h4 class="term"><em> (The mentioned conditions and terms <strong>must</strong> be met and adhered to for one to
+                qualify for a loan enable a smooth engagenment on this platform .)</em></h4>
+        <section class="terms">
+            <ol>
+                <li> <strong>Loan Limit</strong> - Maximum borrowing amount is Ksh 10,000 per loan application.<br> <br>
+                </li>
+                <li> <strong>Eligibility Criteria</strong> - Applicants must be 18 years or older, own a registered
+                    small business in Kenya, and provide valid identification.<br><br></li>
+                <li> <strong>Application Approval</strong> - Approval is subject to verification of business details
+                    and creditworthiness; lending is not guaranteed.<br><br></li>
+                <li> <strong>Repayment Schedule</strong> - Loans must be repaid in daily installments completed no later
+                    than 8:00 PM East Africa Time.<br><br></li>
+                <li> <strong>Late Payment Penalty</strong> - A late payment fee of Ksh 100 applies for each missed daily
+                    installment after the cutoff time.<br><br></li>
+                </li>
+                <li> <strong>Disbursement Method</strong> - Approved funds will be disbursed via M-Pesa or bank
+                    transfer,
+                    depending on the user's preference.<br><br></li>
+                <li> <strong>Repayment Method</strong> Daily repayments must be made via the platform’s integrated
+                    payment
+                    options (e.g., M-Pesa Paybill or online transfer).<br><br></li>
+                <li> <strong>Early Repayment</strong>Borrowers may repay the full loan amount early without penalties,
+                    and
+                    doing so may improve future loan limits.<br><br></li>
+                <li> <strong>Default Terms</strong>Failure to repay the full amount within the agreed duration may
+                    result in
+                    loan default, account suspension, and listing with a credit bureau.<br><br></li>
+                <li> <strong>Data Privacy</strong> All personal and business data provided will be used solely for loan
+                    processing
+                    and will not be shared with third parties without consent.<br><br></li>
+                <li> <strong>Amendments</strong> The platform reserves the right to modify these terms at any time.
+                    Users
+                    will be notified of major changes via email or app notification.<br><br></li>
+                <li> <strong>Limitation of Liability</strong>The lending platform is not liable for business losses or
+                    delays
+                    caused by loan processing times. <br><br></li>
+                <li> <strong>Acceptance of Terms</strong>By submitting a loan application, users <em><strong>agree to
+                            abide
+                            by all listed
+                            terms and conditions without reservation.</strong> </em><br><br></li>
+            </ol>
 
+        </section>
+    </div>
 </body>
+
 </html>
