--- a/form.html
+++ b/form.html
@@ -29,8 +29,12 @@
         <form action="submit">
             <h1 class="form-title">Loan Application Form</h1>
             <div class="form-control">
-                <input type="text" name="" id="" placeholder="">
-                <label for="username">username</label>
+                <label for="username">First Name:</label>
+                <input type="text" name="" id="" placeholder="Enter First Name" required>
+                <label for="username">Second Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Second name" required>
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
             </div>
 
         </form>
