--- a/terms.html
+++ b/terms.html
@@ -73,6 +73,51 @@
 
         </section>
     </div>
+    <footer>
+        <div class="row">
+            <div class="col">
+                <img src="images/Okoa Biashara logo.png" alt="logo" class="logo">
+                <p>Okoa Biashara</p>
+            </div>
+            <div class="col">
+                <h3>Head Office</h3>
+                <p>Nairobi</p>
+                <p>Tom Mboya Street</p>
+                <p>Nyandarua House</p>
+                <i class="fa-solid fa-envelope"></i>
+                <p>okoabiashara@gmail.com</p>
+                <p>+254758477179</p>
+
+            </div>
+            <div class="col">
+
+                <ul>
+                    <h3>Links</h3>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="terms.html">Terms & Conditions</a></li>
+                    <li><a href="form.html">Loan Application Form</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul>
+                    <h3>Follow-us</h3>
+                    <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook-messenger"></i></a></li>
+                </ul>
+            </div>
+        </div> 
+        <hr class="hr">
+        <span>&copy;2025, Okoa Biashara<sup>TM</sup>. All rights reserved.</span>
+    </footer>
+
 </body>
 
 </html>
