Adding login section

--- a/home.html
+++ b/home.html
@@ -38,18 +38,32 @@
             Signup/Login to our website and get the loan to your M-Pesa or Bank Acccount in a few minutes.
         </p>
     </main>
+    <div class="Wrapper">
     <div class="login-form">
         <h2>Login</h2>
         <form action="Login/signup">
             <div class="input-box">
-                <span class="icon"></span>
+                <span class="icon"><i class="fa-solid fa-envelope"></i></span>
                 <label for="Email">Email:</label>
                 <input type="email" required>
+                
+            </div>
+            <div class="input-box">
+                <span class="icon"><i class="fa-solid fa-lock"></i></span>
                 <label for="Password">Password:</label>
                 <input type="password" required>
             </div>
+            <div class="remember-me">
+                <label><input type="checkbox">Remeber Me</label>
+                <a href="">Forgot password?</a>
+            </div>
+            <button type="submit" class="btn">Login</button>
+            <div class="login-register">
+                <p>Don`t have an account?<a href="" class="register-link"></a></p>
+            </div>
 
         </form>
+    </div>
     </div>
 
     <footer>
@@ -63,7 +77,6 @@
                 <p>Nairobi</p>
                 <p>Tom Mboya Street</p>
                 <p>Nyandarua House</p>
-                <i class="fa-solid fa-envelope"></i>
                 <p>okoabiashara@gmail.com</p>
                 <p>+254758477179</p>
 
