--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
             <div class="login-register">
-                <p>Don`t have an account?<a href="" class="register-link"></a></p>
+                <p>Don`t have an account?<a href="" class="register-link">Register</a></p>
             </div>
 
         </form>
