--- a/home.html
+++ b/home.html
@@ -33,12 +33,15 @@
     <main>
         <h1>Welcome To Okoa Biashara</h1>
         <p class="beta">Are you a small business owner who needs a loan to add stock to your business?<br>
-            Are you looking for a; <strong><em> Reliable, Quick, Low interest </em></strong>loan?
+            Are you looking for a; <strong> Reliable, Quick, Low interest </strong>loan?
             Okoa Biashara got you covered. <br>
             Signup/Login to our website and get the loan to your M-Pesa or Bank Acccount in a few minutes.
         </p>
     </main>
-    <div class="Wrapper">
+    <div class="wrapper">
+        <span class="icon-close">
+            <i class="fa-solid fa-xmark"></i>
+        </span>
     <div class="login-form">
         <h2>Login</h2>
         <form action="Login/signup">
@@ -60,6 +63,38 @@
             <button type="submit" class="btn">Login</button>
             <div class="login-register">
                 <p>Don`t have an account?<a href="" class="register-link">Register</a></p>
+            </div>
+
+        </form>
+    </div>
+    <div class="form-box register">
+        <h2>Registration</h2>
+        <form action="Login/signup">
+            <div class="input-box">
+                <span class="icon">
+                    <i class="fa-solid fa-user"></i>
+                </span>
+                <label for="Email">Username:</label>
+                <input type="text" required>
+                
+            </div>
+            <div class="input-box">
+                <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                <label for="Email">Email:</label>
+                <input type="email" required>
+                
+            </div>
+            <div class="input-box">
+                <span class="icon"><i class="fa-solid fa-lock"></i></span>
+                <label for="Password">Password:</label>
+                <input type="password" required>
+            </div>
+            <div class="remember-me">
+                <label><input type="checkbox">I agree to the terms & conditions</label>
+            </div>
+            <button type="submit" class="btn">Register</button>
+            <div class="login-register">
+                <p>Already have an account?<a href="" class="login-link">Login</a></p>
             </div>
 
         </form>
