Adding loan application form, not styled

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                 <li><a href="terms.html">Terms & Conditions</a></li>
                 <li><a href="form.html">Loan Application Form</a></li>
             </ul>
-            <button>Login</button>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </div>
     <!-- End of navbar -->
