--- a/form.html
+++ b/form.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Okoa Biashara</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
     <div class="navbar">
         <nav>
@@ -35,10 +37,35 @@
                 <input type="text" name="" id="" placeholder="Enter Second name" required>
                 <label for="username">Family Name:</label>
                 <input type="text" name="" id="" placeholder="Enter Family name">
+
             </div>
+            <div class="personal details">
+                <label for="id">ID Number:</label>
+                <input type="text" name="" id="" placeholder="Enter ID Number">
+                <label for="username">Sex:</label>
+                <input type="checkbox" name="" id="" placeholder="Enter Family name">
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
+                <input type="text" name="" id="" placeholder="Enter Family name">
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
+            </div>
+            <div id="radio-buttons">
+                <input type="radio" id="male" name="gender" value="male">
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female">Female</label>
+            </div>
+
+
 
         </form>
     </div>
 
 </body>
+
 </html>
