Adding more details to the form, business details section

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
         <span class="icon-close">
             <i class="fa-solid fa-xmark"></i>
         </span>
-    <div class="login-form">
+    <div class="login-form login">
         <h2>Login</h2>
         <form action="Login/signup">
             <div class="input-box">
