--- a/form.html
+++ b/form.html
@@ -27,38 +27,52 @@
             <button>Login</button>
         </nav>
     </div>
-    <div class="form">
+    <div class="form-app">
         <form action="submit">
             <h1 class="form-title">Loan Application Form</h1>
-            <div class="form-control">
+            <div class="personal-details">
+                <h3>Personal details</h3>
                 <label for="username">First Name:</label>
                 <input type="text" name="" id="" placeholder="Enter First Name" required>
                 <label for="username">Second Name:</label>
                 <input type="text" name="" id="" placeholder="Enter Second name" required>
                 <label for="username">Family Name:</label>
-                <input type="text" name="" id="" placeholder="Enter Family name">
-
-            </div>
-            <div class="personal details">
-                <label for="id">ID Number:</label>
-                <input type="text" name="" id="" placeholder="Enter ID Number">
-                <label for="username">Sex:</label>
-                <input type="checkbox" name="" id="" placeholder="Enter Family name">
-                <label for="username">Family Name:</label>
-                <input type="text" name="" id="" placeholder="Enter Family name">
-                <label for="username">Family Name:</label>
-                <input type="text" name="" id="" placeholder="Enter Family name">
-                <input type="text" name="" id="" placeholder="Enter Family name">
-                <label for="username">Family Name:</label>
-                <input type="text" name="" id="" placeholder="Enter Family name">
-                <label for="username">Family Name:</label>
-                <input type="text" name="" id="" placeholder="Enter Family name">
-            </div>
-            <div id="radio-buttons">
+                <input type="text" name="" id="" placeholder="Enter Family name"> <br><br>
+                <label for="sex">Sex:</label>
                 <input type="radio" id="male" name="gender" value="male">
                 <label for="male">Male</label>
                 <input type="radio" id="female" name="gender" value="female">
-                <label for="female">Female</label>
+                <label for="female">Female</label><br><br>
+                <label for="number">ID Number:</label>
+                <input type="number" minlength="6" maxlength="12" name="" id="" placeholder="Enter ID Number">
+                <label for="username">Age:</label>
+                <input type="number" name="" id="" placeholder="Enter Agex">
+                <label for="date">Date Of Birth</label>
+                <input type="date" name="" id="">
+                <hr>
+
+            </div>
+            <div class="business-details">
+                <h3>Business Details</h3>
+                <P><em>(You must fill all the fields in this section)</em></P>
+
+                <label for="text">Business Name:</label>
+                <input type="text" name="" id="" placeholder="">
+                <label for="Location">Business Location:</label>
+                <input type="text" name="" id="" placeholder="Enter Location" required>
+                <label for="">Period Of Business:</label>
+                <input type="text" name="" id="" placeholder="In months e.g 6months"><br>
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
+                <label for="username">Family Name:</label>
+                <input type="text" name="" id="" placeholder="Enter Family name">
+            </div>
+
+            <div id="radio-buttons">
+
+            </div>
+            <div>
+
             </div>
 
 
