styling  about page

--- a/about.html
+++ b/about.html
@@ -1,32 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Okoa Biashara</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
+
 <body>
-    <div class="navbar">
-        
+   <div class="navbar">
         <nav>
             <a href="home.html">
                 <img class="logo" src="/images/Okoa Biashara logo.png" alt="logo">
                 <span class="okoa">Okoa Biashara</span>
             </a>
             <ul>
-                <li><a href="home.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms & Conditions</a></li>
-                <li><a href="form.html">Loan Application Form</a></li>
+                <li><a href="form.html">Loan Form</a></li>
             </ul>
-            <button>Login</button>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </div>
     <h1>About Us</h1>
+    <div class="about">
+        <h1 class="jc">Okoa Biashara</h1>
+        <p class="pov"><em>(Your reliable lender)</em></p>
+        <div class="">
+            <div>
+                <h2>Our Mission</h2>
+                <p>To provide accessible, secure, and transparent
+                    loan services that empower individuals
+                    and small businesses to achieve financial growth and stability through innovative digital
+                    solutions.
+
+                </p>
+                <h2>Our Vision</h2>
+                <p>To become the leading online platform for ethical
+                    and user-friendly lending, transforming lives by bridging financial gaps and fostering
+                    economic resilience.
+
+                </p>
+                <h2>Our Values</h2>
+                <ul>
+                    <li><strong>Integrity:</strong> We uphold honesty and transparency in every transaction.
+
+                    </li><br>
+                    <li><strong>Accessibility:</strong> We design services that are inclusive and easy to use
+                        for all users.
+                    </li><br>
+                    <li><strong>Empowerment:</strong> We support users in making informed financial decisions.
+                    </li><br>
+                    <li><strong>Innovation:</strong> We continuously improve our platform to meet evolving
+                        financial needs.</li><br>
+                    <li><strong>Security:</strong> We prioritize data protection and user privacy.
+                    </li><br>
+                    <li><strong>Customer-Centricity</strong> We listen, respond, and adapt to our users’ needs.
+                    </li><br>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+        <div class="row">
+            <div class="col">
+                <img src="images/Okoa Biashara logo.png" alt="logo" class="logo">
+                <p>Okoa Biashara</p>
+            </div>
+            <div class="col">
+                <h3>Head Office</h3>
+                <p>Nairobi</p>
+                <p>Tom Mboya Street</p>
+                <p>Nyandarua House</p>
+                <i class="fa-solid fa-envelope"></i>
+                <p>okoabiashara@gmail.com</p>
+                <p>+254758477179</p>
+
+            </div>
+            <div class="col">
+
+                <ul>
+                    <h3>Links</h3>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="terms.html">Terms & Conditions</a></li>
+                    <li><a href="form.html">Loan Application Form</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul>
+                    <h3>Follow-us</h3>
+                    <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook-messenger"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <hr class="hr">
+        <span>&copy;2025, Okoa Biashara<sup>TM</sup>. All rights reserved.</span>
+    </footer>
+
 
 </body>
+
 </html>
