--- a/home.html
+++ b/home.html
@@ -19,12 +19,10 @@
                 <span class="okoa">Okoa Biashara</span>
             </a>
             <ul>
-                <li><a href="home.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms & Conditions</a></li>
-                <li><a href="form.html">Loan Application Form</a></li>
+                <li><a href="form.html">Loan Form</a></li>
             </ul>
             <button class="btnLogin-popup">Login</button>
         </nav>
@@ -32,11 +30,13 @@
     <!-- End of navbar -->
     <main>
         <h1>Welcome To Okoa Biashara</h1>
+        <h3 class="pov"><em>(Your reliable lender)</em></h3>
         <p class="beta">Are you a small business owner who needs a loan to add stock to your business?<br>
             Are you looking for a; <strong> Reliable, Quick, Low interest </strong>loan?
             Okoa Biashara got you covered. <br>
             Signup/Login to our website and get the loan to your M-Pesa or Bank Acccount in a few minutes.
         </p>
+        <p>Read our Terms & Conditions <a href="terms.html">Click here.....</a></p>
     </main>
     <div class="wrapper">
         <span class="icon-close">
