--- a/services.html
+++ b/services.html
@@ -15,19 +15,93 @@
                 <span class="okoa">Okoa Biashara</span>
             </a>
             <ul>
-                <li><a href="home.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="terms.html">Terms & Conditions</a></li>
-                <li><a href="form.html">Loan Application Form</a></li>
+                <li><a href="form.html">Loan Form</a></li>
             </ul>
-            <button>Login</button>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </div>
     <div class="card">
         
     </div>
+     <section class="services">
+  <h2>Our Services</h2>
+  <div class="service-list">
+    <div class="service">
+      <h3>Startup Loans</h3>
+      <p>Launch your business with flexible capital tailored to your goals.</p>
+    </div>
+    <div class="service">
+      <h3>Working Capital Loans</h3>
+      <p>Manage daily operations with reliable short-term funding.</p>
+    </div>
+    <div class="service">
+      <h3>Equipment Financing</h3>
+      <p>Upgrade your tools and technology with asset-based loans.</p>
+    </div>
+    <div class="service">
+      <h3>Invoice Financing</h3>
+      <p>Turn unpaid invoices into instant cash flow.</p>
+    </div>
+    <div class="service">
+      <h3>LPO Financing</h3>
+      <p>Fulfill purchase orders confidently with fast loan support.</p>
+    </div>
+    <div class="service">
+      <h3>Expansion Loans</h3>
+      <p>Scale your operations with funding for growth and new branches.</p>
+    </div>
+  </div>
+</section>
+
+
+    <footer>
+        <div class="row">
+            <div class="col">
+                <img src="images/Okoa Biashara logo.png" alt="logo" class="logo">
+                <p>Okoa Biashara</p>
+            </div>
+            <div class="col">
+                <h3>Head Office</h3>
+                <p>Nairobi</p>
+                <p>Tom Mboya Street</p>
+                <p>Nyandarua House</p>
+                <i class="fa-solid fa-envelope"></i>
+                <p>okoabiashara@gmail.com</p>
+                <p>+254758477179</p>
+
+            </div>
+            <div class="col">
+
+                <ul>
+                    <h3>Links</h3>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="terms.html">Terms & Conditions</a></li>
+                    <li><a href="form.html">Loan Application Form</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul>
+                    <h3>Follow-us</h3>
+                    <li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook-messenger"></i></a></li>
+                </ul>
+            </div>
+        </div> 
+        <hr class="hr">
+        <span>&copy;2025, Okoa Biashara<sup>TM</sup>. All rights reserved.</span>
+    </footer>
+
 
 </body>
 </html>
